# hamster

./: .gitignore  README.md  com.github.slawtul.hamster.yml  compile_commands.json  meson.build
data/: appdata.xml  gschema.xml  meson.build
debian/: control
meson/: post_install.py
po/: LINGUAS  com.github.slawtul.hamster.pot  de.po  es.po  fr.po  nl.po  no.po  pl.po
src/: hamster_run.cpp
src/ui_lib/: meson.build
src/ui_lib/ui/dialog/: AboutDialog.cpp  AboutDialog.h
src/ui_lib/ui/popover/: SettingsMenuButton.cpp  SettingsMenuButton.h  SettingsPopover.cpp  SettingsPopover.h
src/ui_lib/ui/window/: ItemDetailsWindow.cpp  ItemDetailsWindow.h  MainWindow.cpp  MainWindow.h  PreferencesWindow.cpp  PreferencesWindow.h  ShortcutsWindow.cpp  ShortcutsWindow.h  WindowBody.cpp  WindowBody.h
src/util_lib/: meson.build
src/util_lib/util/file/: FileUtil.cpp  FileUtil.h
src/util_lib/util/item/: ItemUtil.cpp  ItemUtil.h
src/util_lib/util/json/: json.hpp
src/util_lib/util/log/: LogUtil.cpp  LogUtil.h
src/util_lib/util/text/: TextUtil.cpp  TextUtil.h
src/util_lib/util/ui/: UIUtil.cpp  UIUtil.h
